--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>homework 11</title>
-    <link rel="stylesheet" href="/./index.b945b099.css" />
+    <link rel="stylesheet" href="./index.b945b099.css" />
   </head>
   <body>
     <form class="search-form" id="search-form">
